# OutFrame

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
css/: style.css
js/: app.js
scripts/: download-models.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
