[package]
name = "outframe"
version = "1.0.0"
description = "OutFrame - Break out of the frame"
authors = []
edition = "2021"

[lib]
name = "outframe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "outframe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
